News UAT/force-app/main/default/objects/Contract_Level_c__x/Contract_Level_c__x.object-meta.xml
<CustomObject>
    <externalDataSource>ARMuat</externalDataSource>
    <externalName>Contract_Level__c</externalName>
    <label>NRM Contract Level</label>
    <pluralLabel>NRM Contract Levels</pluralLabel>
</CustomObject>