News UAT/force-app/main/default/objects/Contract_Level_c__x/fields/Advertising_Price_Agreement_Request_c__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Price_Agreement_Request_c__c</fullName>
    <externalDeveloperName>Advertising_Price_Agreement_Request__c</externalDeveloperName>
    <label>Advertising Price Agreement Request</label>
    <length>18</length>
    <referenceTo>Advertising_Price_Agreement_Requests_c__x</referenceTo>
    <relationshipLabel>NRM Contract Levels</relationshipLabel>
    <relationshipName>NRM_Contract_Levels</relationshipName>
    <type>ExternalLookup</type>
</CustomField>