News UAT/force-app/main/default/objects/Contract_Level_c__x/fields/Advertising_Price_Agreement_Request_text__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Price_Agreement_Request_text__c</fullName>
    <externalDeveloperName>Advertising_Price_Agreement_Request_text__c</externalDeveloperName>
    <label>Advertising Price Agreement Request text</label>
    <length>10</length>
    <type>Text</type>
</CustomField>