News UAT/force-app/main/default/objects/Contract_Level_c__x/fields/Company_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_c__c</fullName>
    <externalDeveloperName>Company_Name__c</externalDeveloperName>
    <label>Company Name</label>
    <length>18</length>
    <referenceTo>Account__x</referenceTo>
    <relationshipLabel>NRM Contract Levels</relationshipLabel>
    <relationshipName>NRM_Contract_Levels</relationshipName>
    <type>ExternalLookup</type>
</CustomField>