News UAT/force-app/main/default/objects/Contract_Level_c__x/fields/Contract_Cancelled_c__c.field-meta.xml
<CustomField>
    <fullName>Contract_Cancelled_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Contract_Cancelled__c</externalDeveloperName>
    <label>Contract Cancelled</label>
    <type>Checkbox</type>
</CustomField>