News UAT/force-app/main/default/objects/Contract_Level_c__x/fields/Contract_Level_c__c.field-meta.xml
<CustomField>
    <fullName>Contract_Level_c__c</fullName>
    <externalDeveloperName>Contract_Level__c</externalDeveloperName>
    <label>Contract Level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>