News UAT/force-app/main/default/objects/Contract_Level_c__x/fields/Contract_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number_c__c</fullName>
    <externalDeveloperName>Contract_Number__c</externalDeveloperName>
    <label>Contract Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>