News UAT/force-app/main/default/objects/Contract_Level_c__x/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <externalDeveloperName>CreatedById</externalDeveloperName>
    <label>Created By</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <referenceTo>User__x</referenceTo>
    <relationshipLabel>NRM Contract Levels</relationshipLabel>
    <relationshipName>NRM_Contract_Levels</relationshipName>
    <type>ExternalLookup</type>
</CustomField>