News UAT/force-app/main/default/objects/Contract_Level_c__x/fields/Custom_Contract_Discount_c__c.field-meta.xml
<CustomField>
    <fullName>Custom_Contract_Discount_c__c</fullName>
    <externalDeveloperName>Custom_Contract_Discount__c</externalDeveloperName>
    <label>Custom % Discount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>