News UAT/force-app/main/default/objects/Contract_Level_c__x/fields/Days_of_Week_c__c.field-meta.xml
<CustomField>
    <fullName>Days_of_Week_c__c</fullName>
    <externalDeveloperName>Days_of_Week__c</externalDeveloperName>
    <label>Days of Week</label>
    <length>128</length>
    <type>Text</type>
</CustomField>