News UAT/force-app/main/default/objects/Contract_Level_c__x/fields/Description_c__c.field-meta.xml
<CustomField>
    <fullName>Description_c__c</fullName>
    <externalDeveloperName>Description__c</externalDeveloperName>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>