News UAT/force-app/main/default/objects/Contract_Level_c__x/fields/Modular_percent_discount_c__c.field-meta.xml
<CustomField>
    <fullName>Modular_percent_discount_c__c</fullName>
    <externalDeveloperName>Modular_percent_discount__c</externalDeveloperName>
    <label>Modular % Discount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>