News UAT/force-app/main/default/objects/Contract_Level_c__x/fields/Modular_Rate_c__c.field-meta.xml
<CustomField>
    <fullName>Modular_Rate_c__c</fullName>
    <externalDeveloperName>Modular_Rate__c</externalDeveloperName>
    <label>Modular Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>