News UAT/force-app/main/default/objects/Contract_Level_c__x/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <externalDeveloperName>Name</externalDeveloperName>
    <label>Account Contract ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>