News UAT/force-app/main/default/objects/Contract_Level_c__x/fields/Publication_c__c.field-meta.xml
<CustomField>
    <fullName>Publication_c__c</fullName>
    <externalDeveloperName>Publication__c</externalDeveloperName>
    <label>Publication</label>
    <length>18</length>
    <type>Text</type>
</CustomField>