News UAT/force-app/main/default/objects/Contract_Level_c__x/fields/Publication_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Publication_Name_c__c</fullName>
    <externalDeveloperName>Publication_Name__c</externalDeveloperName>
    <label>Publication Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>