News UAT/force-app/main/default/objects/Contract_Level_c__x/fields/Status_c__c.field-meta.xml
<CustomField>
    <fullName>Status_c__c</fullName>
    <externalDeveloperName>Status__c</externalDeveloperName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>In Approval Process</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>