News UAT/force-app/main/default/objects/Contract_Level_c__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>